[project]
name = "eclx"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
write_to = "src/eclx/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=digirock --junitxml=pytest.xml --cov-report=term-missing:skip-covered"
testpaths = [
    "tests"
]