
[metadata]
name = eclx
description = Tools for extracting information from Eclipse run decks and results.
ile:README.md
long_description_content_type = text/markdown
authors = Tony Hallam
author_email = trhallam@gmail.com
url = https://github.com/trhallam/eclx

license = MIT
licence_files = LICENSE

readme = README.md

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires = 
    ecl > 2.10
    click >= 8.0
    tqdm
    numpy
    pandas
    more_itertools
    loguru

[options.extras_require]
test = pytest; pandas; numpy; xarray
docs = jupytext

[options.entry_points]
console_scripts =
    eclx = eclx.cli:main
